Implemented compareGuess and background colour changing

--- a/style.css
+++ b/style.css
@@ -25,3 +25,18 @@ body {
 .row {
   display: flex;
 }
+
+.G {
+  background-color: green;
+  border-color: green;
+}
+
+.Y {
+  background-color: yellow;
+  border-color: yellow;
+}
+
+.X {
+  background-color: #333;
+}
+
