--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   font-size: 30px;
 }
 
-#app {
+.container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -29,6 +29,27 @@ body {
 
 .row {
   display: flex;
+}
+
+.keyboard-row {
+  display: flex;
+  justify-content: center;
+}
+
+.keyboard-key {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 35px;
+  height: 60px;
+  border-radius: 4px;
+  background-color: #555;
+  margin: 4px;
+  font-size: 16px;
+}
+
+.enter-key {
+  width: 80px;
 }
 
 .G {
