--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 15px;
 }
 
 .letter-tile {
@@ -50,6 +51,16 @@ body {
 
 .enter-key {
   width: 80px;
+}
+
+.popup {
+  position: absolute;
+  font-size: 16px;
+  background-color: #bbb;
+  color: #111;
+  padding: 10px 20px;
+  border-radius: 8px;
+  box-shadow: 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .G {
