--- a/style.css
+++ b/style.css
@@ -43,9 +43,13 @@ body {
   align-items: center;
   width: 35px;
   height: 60px;
+  border:none;
+  color: white;
   border-radius: 4px;
   background-color: #555;
   margin: 4px;
+  font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-weight: bold;
   font-size: 16px;
 }
 
